# ai-umpire

./: .gitignore  README.md  ai_umpire.yml  aiumpire.yml  optimal_model_params.txt  pyproject.toml  simulation.py
.github/workflows/: tests.yml
ai-umpire/: blob_detection.py  hough.py  motion_blur.py  simulation.py
ai_umpire/: __init__.py
ai_umpire/dataset/: __init__.py  data_gen.py
ai_umpire/detection/: detector.py
ai_umpire/localisation/: __init__.py  localiser.py
ai_umpire/simulation/: __init__.py  fixed_sim_objs.py  match_simulator.py  sim.py  sim_consts.py  sim_gen.py  sim_generator.py  textures.py
ai_umpire/synthetic_data_gen/: README.md  config.yaml  data_gen.py
ai_umpire/tracking/: kalman.py  tracker.py
ai_umpire/trajectory_interpretation/: __init__.py  trajectory_interpreter.py
ai_umpire/util/: POV_textures.py  __init__.py  field_constants.py  sim_consts.py  textures.py  util.py
ai_umpire/video_generation/: data_gen.py
demo_scripts/: ai_umpire_demo.py  kalman_demo.py
prototyping/: blob_detection.py  foreground_segmentation.py  hough.py  motion_blur.py  simulation.py
scripts/: ai_umpire_demo.py  camera_calibration.py  detector_demo.py  evaluate_cam_calib.py  evaluate_detectors.py  evaluate_tracker.py  generate_synthetic_data.py  kalman_demo.py  optimise_detector.py  trajectory_interpretation_demo.py
test/: test_data_generator.py  test_localising.py  test_simulation.py  test_util.py
tests/: test_ai_umpire.py  test_data_generator.py  test_localising.py  test_sim_generator.py  test_simulation.py  test_tracking.py  test_util.py
(+1636 files in other folders)
