[tool.pytest.ini_options]
addopts = "-rA -q -v"# --cov="
testpaths = [
    "tests"
]

[tool.black]
line-length = 88

[tool.poetry]
name = "ai-umpire"
version = "0.0.0"
description = ""
authors = ["DavidHurst <davidshrst@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
